test/asm/skip-expansions.err
error: skip-expansions.asm(31) -> skip-expansions.asm::mac2(21):
    Macro argument '\1' not defined
error: skip-expansions.asm(31) -> skip-expansions.asm::mac2(21):
    syntax error, unexpected (
error: Assembly aborted (2 errors)!
